re PR fortran/24223 (Gfortran crashes in two places)

2005-11-21  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/24223
	* resolve.c (resolve_contained_fntype) Error if an internal
	function is assumed character length.

	PR fortran/24705
	* trans-decl.c (gfc_create_module_variable) Skip ICE in
	when backend decl has been built and the symbol is marked
	as being in an equivalence statement.

2005-11-21  Paul Thomas  <pault@gcc.gnu.org

	PR fortran/24223
	* gfortran.dg/substring_equivalence.f90: New test.

	PR fortran/24705
	* gfortran.dg/auto_internal_assumed.f90: New test.

From-SVN: r107310